--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tooplate's Little Fashion - FAQs Page</title>
+        <title>FAQs Page</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,15 +21,8 @@
 
         <link rel="stylesheet" href="css/slick.css"/>
 
-        <link href="css/tooplate-little-fashion.css" rel="stylesheet">
+        <link href="css/rutvik-little-fashion.css" rel="stylesheet">
         
-<!--
-
-Tooplate 2127 Little Fashion
-
-https://www.tooplate.com/view/2127-little-fashion
-
--->
     </head>
     
     <body>
@@ -49,7 +42,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>E</span> Fashion</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -115,14 +108,14 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingOne">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionGeneralOne" aria-expanded="true" aria-controls="accordionGeneralOne">
-                                        What is this Little Fashion?
+                                        What is this L?
                                         </button>
                                     </h2>
 
                                     <div id="accordionGeneralOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionGeneral">
 
                                         <div class="accordion-body">
-                                            <p class="large-paragraph"><strong>Little Fashion</strong> is free Bootstrap 5 website template for everyone. There are 8 HTML pages included in this template and you can expand more pages as you need.</p>
+                                            <p class="large-paragraph"><strong>L</strong> is free Bootstrap 5 website template for everyone. There are 8 HTML pages included in this template and you can expand more pages as you need.</p>
 
                                             <p class="large-paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                         </div>
@@ -132,14 +125,14 @@ https://www.tooplate.com/view/2127-little-fashion
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="headingTwo">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#accordionGeneralTwo" aria-expanded="false" aria-controls="accordionGeneralTwo">
-                                        What is Tooplate website?
+                                        What is rutvik website?
                                         </button>
                                     </h2>
 
                                     <div id="accordionGeneralTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionGeneral">
 
                                         <div class="accordion-body">
-                                            <p class="large-paragraph"><a href="https://www.tooplate.com/free-templates" target="_blank">Tooplate</a> is a great website to download free HTML website templates for your business or personal use. Tooplate website has been online for almost 8 years now. Thank you for visiting our website.</p>
+                                            <p class="large-paragraph"><a href="#free-templates" target="_blank">rutvik</a> is a great website to download free HTML website templates for your business or personal use. rutvik website has been online for almost 8 years now. Thank you for visiting our website.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -154,7 +147,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                     <div id="accordionGeneralThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionGeneral">
 
                                         <div class="accordion-body">
-                                            <p class="large-paragraph">You can support our Tooplate website by sharing it to your friends or colleagues on the web or social media.</p>
+                                            <p class="large-paragraph">You can support our rutvik website by sharing it to your friends or colleagues on the web or social media.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -211,10 +204,10 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="row">
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
-                        <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
+                        <h4 class="text-white mb-3"><a href="index.html">E</a> Fashion</h4>
+                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2024 <strong></strong></p>
                         <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <p class="copyright-text">Designed by <a href="#" target="_blank">rutvik</a></p>
                     </div>
 
                     <div class="col-lg-5 col-8">
