--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tooplate's Little Fashion - Contact Page</title>
+        <title>Contact Page</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,13 +21,13 @@
 
         <link rel="stylesheet" href="css/slick.css"/>
 
-        <link href="css/tooplate-little-fashion.css" rel="stylesheet">
+        <link href="css/rutvik-little-fashion.css" rel="stylesheet">
         
 <!--
 
-Tooplate 2127 Little Fashion
+rutvik 2127 L
 
-https://www.tooplate.com/view/2127-little-fashion
+#view/2127-little-fashion
 
 -->
     </head>
@@ -49,7 +49,7 @@ https://www.tooplate.com/view/2127-little-fashion
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>E</span> Fashion</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -198,10 +198,10 @@ https://www.tooplate.com/view/2127-little-fashion
                 <div class="row">
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
-                        <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
+                        <h4 class="text-white mb-3"><a href="index.html">E</a> Fashion</h4>
+                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2024 <strong>L</strong></p>
                         <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <p class="copyright-text">Designed by <a href="#" target="_blank">rutvik</a></p>
                     </div>
 
                     <div class="col-lg-5 col-8">
