--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Tooplate's Little Fashion</title>
+        <title>rutvik's L</title>
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
 
         <link rel="stylesheet" href="css/slick.css"/>
 
-        <link href="css/tooplate-little-fashion.css" rel="stylesheet">
+        <link href="css/rutvik-little-fashion.css" rel="stylesheet">
 
     </head>
     
@@ -42,7 +42,7 @@
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>E</span> Fashion</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -93,7 +93,7 @@
                                 <div class="col-lg-6 col-10">
                                     <h1 class="slick-title">Cool Fashion</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Little fashion template comes with total 8 HTML pages provided by Tooplate website.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">L template comes with total 8 HTML pages provided by rutvik website.</p>
 
                                     <a href="about.html" class="btn custom-btn">Learn more about us</a>
                                 </div>
@@ -111,7 +111,7 @@
                                 <div class="col-lg-6 col-10">
                                     <h1 class="slick-title">New Design</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Please share this Little Fashion template to your friends. Thank you for supporting us.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">Please share this L template to your friends. Thank you for supporting us.</p>
 
                                     <a href="product.html" class="btn custom-btn">Explore products</a>
                                 </div>
@@ -129,7 +129,7 @@
                                 <div class="col-lg-6 col-10">
                                     <h1 class="slick-title">Talk to us</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Tooplate is one of the best HTML CSS template websites for everyone.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">rutvik is one of the best HTML CSS template websites for everyone.</p>
 
                                     <a href="contact.html" class="btn custom-btn">Work with us</a>
                                 </div>
@@ -145,7 +145,7 @@
                     <div class="row">
 
                         <div class="col-12 text-center">
-                            <h2 class="mb-5">Get started with <span>Little</span> Fashion</h2>
+                            <h2 class="mb-5">Get started with <span>E</span> Fashion</h2>
                         </div>
 
                         <div class="col-lg-2 col-12 mt-auto mb-auto">
@@ -177,7 +177,7 @@
                                             <div class="d-flex flex-column h-100 ms-lg-4 mt-lg-0 mt-5">
                                                 <h4 class="mb-3">Good <span>Design</span> <br>Ideas for <span>your</span> fashion</h4>
 
-                                                <p>Little Fashion templates comes with <a href="sign-in.html">sign in</a> / <a href="sign-up.html">sign up</a> pages, product listing / product detail, about, FAQs, and contact page.</p>
+                                                <p>L templates comes with <a href="sign-in.html">sign in</a> / <a href="sign-up.html">sign up</a> pages, product listing / product detail, about, FAQs, and contact page.</p>
 
                                                 <p>Since this HTML template is based on Boostrap 5 CSS library, you can feel free to add more components as you need.</p>
 
@@ -285,7 +285,7 @@
                                 
                                 <h2 class="mb-4"><span>Retail</span> shop owners</h2>
 
-                                <p class="lead mb-4">Credits go to Unsplash and FreePik websites for images used in this Little Fashion by Tooplate.</p>
+                                <p class="lead mb-4">Credits go to Unsplash and FreePik websites for images used in this L by rutvik.</p>
 
                                 <a href="products.html" class="custom-link">
                                     Explore Products
@@ -398,9 +398,9 @@
 
                     <div class="col-lg-3 col-10 me-auto mb-4">
                         <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
+                        <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2024 <strong>L</strong></p>
                         <br>
-                        <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <p class="copyright-text">Designed by <a href="#" target="_blank">rutvik</a></p>
                     </div>
 
                     <div class="col-lg-5 col-8">
